[package]
edition = "2021"
name = "qutiepie"
version = "0.1.0"

[features]
mock = []

[dependencies]
aws-config = "0.6.0"
aws-sdk-sqs = "0.6.0"
futures = "0.3.21"
snafu = "0.7.0"
tokio = {version = "1.16.1", features = ["rt", "sync", "macros", "time", "parking_lot", "rt-multi-thread"]}
tracing = "0.1.30"

[dev-dependencies]
rand = "0.8.4"
tracing-subscriber = {version = "0.3.8", features = ["env-filter", "fmt"]}
tracing-test = "0.2.1"
